stop horizontal scroll

--- a/scss/components/_feedback.scss
+++ b/scss/components/_feedback.scss
@@ -1,6 +1,8 @@
 .feedback{
     @include flex;
     flex-direction: column;
+    overflow: hidden;
+    width: 100%;
     &_scroller{
         width: 100%;
         overflow-x: scroll;
@@ -25,7 +27,7 @@
 @media (max-width:500px){
     .feedback{
         &_card{
-            width: 90dvw;
+            width: 80dvw;
         }
     }
 }
